test/files/neg/bug4419.check
bug4419.scala:2: error: forward reference extends over definition of value b
  { val b = a; val a = 1 }
            ^
one error found
